[gd_scene load_steps=2 format=3 uid="uid://baqnvhynm7ixj"]

[ext_resource type="Script" path="res://ui/battle_prep_new/inventory/inventory_option_selection.gd" id="1_sxuvh"]

[node name="InventoryOptionSelection" type="PanelContainer"]
custom_minimum_size = Vector2(205, 210)
size_flags_vertical = 0
script = ExtResource("1_sxuvh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ManageItemsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Manage Items"

[node name="TradeButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Trade"

[node name="StoreAllButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Store All"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ManageItemsButton" to="." method="_on_manage_items_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TradeButton" to="." method="_on_trade_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StoreAllButton" to="." method="_on_store_all_button_pressed"]
